# web-mailing-for-SkyPro

./: .env.sample  README.md  groups.json  mailing_fixture.json  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: add_mailing_fixture.py  send_newsletter.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingrecipient_options_alter_message_options_and_more.py
mailing/templates/mailing/: base.html  create_message.html  create_newsletter.html  create_recipient.html  detail_message.html  detail_newsletter.html  detail_recipient.html  index.html  list_message.html  list_newsletter.html  list_recipient.html  message_confirm_delete.html  newsletter_confirm_delete.html  recipient_confirm_delete.html
mailing/templates/mailing/includes/: header.html
mailing/templates/mailing/moderation/: list_newsletter.html  list_recipient.html  list_users.html
mailing/templates/mailing/tags/: menu.html
mailing/templatetags/: mail_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_modeluser_token.py  0003_alter_modeluser_options_modeluser_avatar_and_more.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html
